--- a/NetCafeWeb/Views/NetCafe/Index.cshtml
+++ b/NetCafeWeb/Views/NetCafe/Index.cshtml
@@ -1,14 +1,21 @@
 ﻿
 @{
-   
-     
+
+
     ViewBag.Title = "NetCafe Index";
     Layout = "~/Views/Shared/MasterPage.cshtml";
     List<NetCafe> netCafes = ViewBag.netcafes;
     List<User> supervisors = ViewBag.supervisors;
     NetCafe selectedNetCafe;
-    
+
 }
+ @{
+     if (Membership.GetUser() == null)
+     {
+       <h1>Mother fuck</h1> 
+     }
+ }
+@Membership.GetUser() asdas
 <p></p>
 <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">+ Add New Net Cafe</button>
 
