--- a/NetCafeWeb/Views/PC/edit.cshtml
+++ b/NetCafeWeb/Views/PC/edit.cshtml
@@ -1,84 +1,83 @@
 ﻿@{
-
     PC pc = ViewBag.pc;
-    ViewBag.Title = "Edit " + pc.pcName;
+    ViewBag.Title = "Edit " + pc.PCName;
     List<NetCafe> netcafes = ViewBag.netcafes;
 }
 
-<h2>Edit + @pc.PCName</h2>
+<h2>Edit @pc.PCName</h2>
 @{  if (pc == null)
-  {
-    <h2>This PC is not longer available. Please try again.</h2>
-  }
-  else
-  {
-    <div class="form-group" style="width:100%">
-        <label>ID</label>
-        <input type="text" class="form-control" value="@pc.PCID" disabled="disabled" />
-        <label for="usr">Name</label>
-        <input type="text" class="form-control" id="pcName" value="@pc.PCName">
-        <label for="usr">Price</label>
-        <input type="text" class="form-control" id="pcPrice" value="@pc.Price">
-        <label for="usr">Description</label>
-        <input type="text" class="form-control" id="pcDescription" value="@pc.PCDescriptions">
-        <div class="form-group">
-            <label for="sel1">Status</label>
-            <select class="form-control" id="netCafeAddress">
-                <option value="-1">NONE</option>
-                @{
+    {
+        <h2>This PC is not longer available. Please try again.</h2>
+    }
+    else
+    {
+        <div class="form-group" style="width:100%">
+            <label>ID</label>
+            <input type="text" class="form-control" value="@pc.PCID" disabled="disabled" />
+            <label>Name</label>
+            <input type="text" class="form-control" id="pcName" value="@pc.PCName">
+            <label>Price</label>
+            <input type="text" class="form-control" id="pcPrice" value="@pc.Price">
+            <label>Description</label>
+            <input type="text" class="form-control" id="pcDescription" value="@pc.PCDescriptions">
+            <div class="form-group">
+                <label for="sel1">Status</label>
+                <select class="form-control" id="netCafeAddress">
+                    <option value="-1">NONE</option>
+                    @{
 
-      foreach (NetCafe netcafe in netcafes)
-      {
-          if (pc.NetCafeID == netcafe.NetCafeID)
-          {
-            <option value="@pc.NetCafeID" selected="selected">@pc.NetCafeID - @pc.NetCafe</option>
-          }
-          else
-          {
-            <option value="@pc.NetCafeID">@pc.NetCafeID - @pc.NetCafe</option>
-          }
+                        foreach (NetCafe netcafe in netcafes)
+                        {
+                            if (pc.NetCafeID == netcafe.NetCafeID)
+                            {
+                                <option value="@pc.NetCafeID" selected="selected">@netcafe.NetCafeName - @netcafe.NetCafeAddress</option>
+                            }
+                            else
+                            {
+                                <option value="@pc.NetCafeID">@netcafe.NetCafeName - @netcafe.NetCafeAddress</option>
+                            }
 
-      }
-                }
-            </select>
+                        }
+                    }
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="sel1">Status</label>
+                <select class="form-control" id="pcStatus">
+                    @if (pc.PCStatus == 1)
+                {
+                        <option value="1" selected="selected">Holding</option>
+                        <option value="2">Using</option>
+                        <option value="3">Free</option>
+                    }
+                    @if (pc.PCStatus == 2)
+                {
+                        <option value="1">Holding</option>
+                        <option value="2" selected="selected">Using</option>
+                        <option value="3">Free</option>
+                    }
+                    else
+                    {
+
+                        <option value="1">Holding</option>
+                        <option value="2">Using</option>
+                        <option value="3" selected="selected">Free</option>
+                    }
+
+                </select>
+            </div>
+
         </div>
-        <div class="form-group">
-            <label for="sel1">Status</label>
-            <select class="form-control" id="pcStatus">
-                @if (pc.PCStatus == 1)
-                {
-                    <option value="1" selected="selected">Holding</option>
-                    <option value="2">Using</option>
-                    <option value="3">Free</option>
-                }
-                @if (pc.PCStatus == 2)
-                {
-                    <option value="1">Holding</option>
-                    <option value="2" selected="selected">Using</option>
-                    <option value="3">Free</option>
-                }
-                else
-                {
+        <p id="error" style="color='red'"></p>
+        <button type="button" class="btn" onclick="location.href='/PC'">Cancel</button>
 
-                    <option value="1">Holding</option>
-                    <option value="2">Using</option>
-                    <option value="3" selected="selected">Free</option>
-                }
-
-            </select>
-        </div>
-
-    </div>
-    <p id="error" style="color='red'"></p>
-    <button type="button" class="btn" onclick="location.href='/PC'">Cancel</button>
-
-    <button type="button" class="btn btn-success" onclick="editPC()">Submit</button>
-  }
+        <button type="button" class="btn btn-success" onclick="editPC()">Submit</button>
+                        }
 }
 <script>
     function editPC() {
         $("#error").html("");
-        $("#error").html("");
+        var id = @pc.PCID;
         var name = $('#pcName').val();
         var price = $('#pcPrice').val();
         var description = $('#pcDescription').val();
@@ -107,8 +106,9 @@
 
 
         $.ajax({
-            url: '/PC/EditPC',
+            url: '/PC/editPC',
             data: {
+                id: id,
                 name: name,
                 price: price,
                 description: description,
