--- a/NetCafeWeb/Views/Order/Edit.cshtml
+++ b/NetCafeWeb/Views/Order/Edit.cshtml
@@ -1,8 +1,7 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Edit";
-    Layout = "~/Views/Shared/MasterPage.cshtml";
-    Order order = ViewBag.Order;
+    
+    Order order = ViewBag.orders;
     
 }
 
@@ -10,46 +9,46 @@
 @{ if (order == null)
  {
     <h2>This order is not longer available. Please try again.</h2>
- }
+}
  else
  {
-    <div class="form-group" style="width:100%">
-                    <label for="usr">PC</label>
-                    <input type="text" class="form-control" id="PC">
-                    <label for="usr">User</label>
-                    <input type="text" class="form-control" id="user">
-                    <label for="usr">Start time</label>
-                    <input type="text" class="form-control" id="startTime">
-                    <div class="form-group">
-                        <label for="sel1">Duration</label>
-                        <select class="form-control" id="duration">
-                            <option value="1">1</option>
-                            <option value="1">2</option>
-                            <option value="1">3</option>
-                            <option value="1">4</option>
-                            <option value="1">5</option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="sel1">Status</label>
-                        <select class="form-control" id="orderStatus">
-                            <option value="1">Holding</option>
-                            <option value="2">Using</option>
-                            <option value="2">Free</option>
-                        </select>
-                    </div>
+    <div class="form-group" style="width: 100%">
+        <label for="usr">PC</label>
+        <input type="text" class="form-control" id="PC">
+        <label for="usr">User</label>
+        <input type="text" class="form-control" id="user">
+        <label for="usr">Start Time</label>
+        <input type="text" class="form-control" id="startTime">
+        <div class="form-group">
+            <label for="sel1">Duration</label>
+            <select class="form-control" id="duration">
+                <option value="1">1</option>
+                <option value="1">2</option>
+                <option value="1">3</option>
+                <option value="1">4</option>
+                <option value="1">5</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="sel1">Status</label>
+            <select class="form-control" id="orderStatus">
+                <option value="1">Holding</option>
+                <option value="2">Using</option>
+                <option value="2">Free</option>
+            </select>
+        </div>
 
-                    
+
     </div>
-    <p id="error" style="color='red'"></p>
-    <button type="button" class="btn" onclick="location.href='/Order'">Cancel</button>
+<p id="error" style="color='red'"></p>
+<button type="button" class="btn" onclick="location.href='/Order'">Cancel</button>
 
-    <button type="button" class="btn btn-success" onclick="editOrder()">Submit</button>
- }
+<button type="button" class="btn btn-success" onclick="editOrder()">Submit</button>
+}
 }
 <script>
     function editOrder() {
-         $("#error").html("");
+        $("#error").html("");
         var PC = $('#PC').val();
         var user = $('#user').val();
         var startTime = $('#startTime').val();
@@ -79,22 +78,20 @@
 
 
         $.ajax({
-            url: '/NetCafe/editOrder',
+            url: '/order/editOrder',
             data: {
-                id: id,
-                name: name,
-                address: address,
-                supervisor: supervisor,
-                status: status,
-                phoneNumber: phoneNumber,
-                description: description
+                pcid: PC,
+                userid: UserID,
+                startTime: StartTime,
+                duration: Duration,
+                status: Status,
             },
             error: function () {
                 alert("Problem")
             },
             success: function (data) {
                 alert("Edit successfully");
-                location.href="/NetCafe";
+                location.href = "/Order";
             },
             type: 'POST'
         });
