--- a/NetCafeWeb/Views/Role/Index.cshtml
+++ b/NetCafeWeb/Views/Role/Index.cshtml
@@ -1,8 +1,25 @@
-﻿
+﻿@model IEnumerable<Microsoft.AspNet.Identity.EntityFramework.IdentityRole>
 @{
     ViewBag.Title = "Index";
-    Layout = "~/Views/Shared/MasterPage.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Available Roles For Application</h2>
+
+@Html.ActionLink("Create Role", "Create", "Role")
+
+<table id="tbrole" class="table">
+    <tr>
+        <td class="c">
+            Role Name
+        </td>
+    </tr>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td class="c">
+                @item.Name
+            </td>
+        </tr>
+    }
+</table>
 
